--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,11 @@
 PORT=5000
-MONGO_URI=mongodb+srv://kishore:1234@cluster0.3x1pxvf.mongodb.net/Project0?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://chandrika:chandrika@cluster0.qhiibj2.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret_here
-OTP_DEV=true
+
+# Twilio (for OTP SMS)
+TWILIO_ACCOUNT_SID=AC51aebcc39358b343f6d7e805a0a33111
+TWILIO_AUTH_TOKEN=77b9cffe2e01d1010d3e67f5e39fa7d9
+TWILIO_PHONE_NUMBER=+16673271371
+
+# OTP expiry (in minutes)
+OTP_EXPIRY_MINUTES=5
