--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
 PORT=5000
-MONGO_URI=mongodb+srv://chandrika:chandrika@cluster0.qhiibj2.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://prashanth:1234@cluster0.sp7ldd7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret_here
 
 # Twilio (for OTP SMS)
-TWILIO_ACCOUNT_SID=AC51aebcc39358b343f6d7e805a0a33111
-TWILIO_AUTH_TOKEN=77b9cffe2e01d1010d3e67f5e39fa7d9
-TWILIO_PHONE_NUMBER=+16673271371
+TWILIO_ACCOUNT_SID=ACbd1b2a4304fefe0a90273f442cfc60b2
+TWILIO_AUTH_TOKEN=49d2fb31680446809fc57cb2e4b56d30
+TWILIO_PHONE_NUMBER=+16893992352
 
 # OTP expiry (in minutes)
 OTP_EXPIRY_MINUTES=5
