--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
+    "multer": "^2.0.2",
     "twilio": "^5.9.0",
     "uuid": "^9.0.0"
   },
