--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "axios": "^1.4.0",
+    "buffer": "^6.0.3",
     "leaflet": "^1.9.4",
+    "multer": "^2.0.2",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
