--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@react-google-maps/api": "^2.20.7",
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
     "leaflet": "^1.9.4",
