--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "multer": "^2.0.2",
+    "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
     "twilio": "^5.9.0",
     "uuid": "^9.0.0"
