--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
+    "mongodb-memory-server": "^10.1.4",
     "multer": "^2.0.2",
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
