Updated RiderDashboard and other fixes

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,3 +1,2 @@
-PORT=3000
-BROWSER=msedge
 REACT_APP_API_URL=http://localhost:5000
+REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyAWstISB_4yTFzsAolxk8SOMBZ_7_RaKQo
