--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,4 +1,6 @@
 REACT_APP_API_URL=http://localhost:5000
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyAWstISB_4yTFzsAolxk8SOMBZ_7_RaKQo
 BROWSER=chrome
-PORT=3002
+PORT=3000
+# Disable interactive prompts so the app never switches ports
+CI=true
