--- a/backend/.env.local
+++ b/backend/.env.local
@@ -1,3 +1,4 @@
 RAZORPAY_KEY_ID=rzp_test_RQ739na1YxOpy5
 RAZORPAY_KEY_SECRET=3GBjFdSSoGA15G8h5JGjR770
 PORT=5000
+ALLOWED_ORIGINS=http://localhost:3000
